RIB-163: fix scrollbar in modals textarea

--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -1248,8 +1248,9 @@ h4 {
 
 #review-text-field {
     border: black 1px solid;
-    background-color: #E2E2E2;
     min-height: 58px;
+    background-color: #E2E2E2;
+    overflow: hidden;
 }
 
 #review-modal {
